[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "^0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "^1.1.0", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
sea-orm-migration = "^1.1.0"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
dotenvy = "0.15.6"